@@ -29,7 +29,7 @@ CONFIG_RT2880_DRAM_64M=y
 CONFIG_RAM_SIZE_AUTO=y
 CONFIG_RALINK_RAM_SIZE=64
 # CONFIG_RALINK_TIMER_DFS is not set
-# CONFIG_KERNEL_NVRAM is not set
+CONFIG_KERNEL_NVRAM=y
 CONFIG_RWSEM_GENERIC_SPINLOCK=y
 # CONFIG_ARCH_HAS_ILOG2_U32 is not set
 # CONFIG_ARCH_HAS_ILOG2_U64 is not set
