@@ -275,9 +275,10 @@ int ra_mtd_write_nm(char *name, loff_t to, size_t len, const u_char *buf)
 	struct mtd_info *mtd;
 	struct erase_info ei;
 	u_char *bak = NULL;
-        DECLARE_WAITQUEUE(wait, current);
-        wait_queue_head_t wait_q;
-
+#ifndef CONFIG_KERNEL_NVRAM
+	DECLARE_WAITQUEUE(wait, current);
+	wait_queue_head_t wait_q;
+#endif
 	mtd = get_mtd_device_nm(name);
 
 	if (IS_ERR(mtd)) {
@@ -298,20 +299,23 @@ int ra_mtd_write_nm(char *name, loff_t to, size_t len, const u_char *buf)
 		goto out;
 	}
 
-        set_current_state(TASK_INTERRUPTIBLE);
-        add_wait_queue(&wait_q, &wait);
-
+#ifndef CONFIG_KERNEL_NVRAM
+	set_current_state(TASK_INTERRUPTIBLE);
+	add_wait_queue(&wait_q, &wait);
+#endif
 	ret = mtd->read(mtd, 0, mtd->erasesize, &rdlen, bak);
 	if (ret) {
-                set_current_state(TASK_RUNNING);
-                remove_wait_queue(&wait_q, &wait);
-		put_mtd_device(mtd);
+#ifndef CONFIG_KERNEL_NVRAM
+		set_current_state(TASK_RUNNING);
+		remove_wait_queue(&wait_q, &wait);
+#endif
 		goto free_out;
 	}
 
+#ifndef CONFIG_KERNEL_NVRAM
         schedule();  /* Wait for write to finish. */
         remove_wait_queue(&wait_q, &wait);
-
+#endif
 	if (rdlen != mtd->erasesize)
 		printk("warning: ra_mtd_write: rdlen is not equal to erasesize\n");
 
@@ -323,25 +327,27 @@ int ra_mtd_write_nm(char *name, loff_t to, size_t len, const u_char *buf)
 	ei.len = mtd->erasesize;
 	ei.priv = 0;
 	ret = mtd->erase(mtd, &ei);
-	if (ret != 0) {
-		put_mtd_device(mtd);
+	if (ret != 0)
 		goto free_out;
-	}
 
+#ifndef CONFIG_KERNEL_NVRAM
         set_current_state(TASK_INTERRUPTIBLE);
         add_wait_queue(&wait_q, &wait);
-
+#endif
 	ret = mtd->write(mtd, 0, mtd->erasesize, &wrlen, bak);
-
+#ifndef CONFIG_KERNEL_NVRAM
         schedule();  /* Wait for write to finish. */
         remove_wait_queue(&wait_q, &wait);
-
-	udelay(500); //add 0.5s delay after write
-
-	put_mtd_device(mtd);
-
+	udelay(300); //add 0.3s delay after write
+#else
+	udelay(100); //add 0.1s delay after write
+#endif
 free_out:
-	kfree(bak);
+	if(mtd)
+	    put_mtd_device(mtd);
+
+	if (bak)
+	    kfree(bak);
 out:
 	return ret;
 }
